--- a/#source/scss/my-account.scss
+++ b/#source/scss/my-account.scss
@@ -573,7 +573,7 @@
     }
 
     .acccontentsect__body {
-        padding: 10px;
+        padding: 20px 10px;
     }
 
     .acccontentsect__header p span {
@@ -1276,7 +1276,7 @@
 
 .marketingemailsbox {
     color: $bace-color;
-    margin-bottom: 36px;
+    margin-bottom: 40px;
 
     .title {
         margin-bottom: 19px;
@@ -1285,7 +1285,7 @@
         line-height: 160%;
     }
 
-     p {
+    p {
         font-size: 15px;
         line-height: 150%;
         max-width: 600px;
@@ -1304,7 +1304,7 @@
                 text-decoration: none;
             }
         }
-     }
+    }
 }
 
 .receiveemails {
@@ -1316,8 +1316,564 @@
     }
 }
 
+.receiveemails__header {
+    display: flex;
+    align-items: center;
+    max-width: 730px;
+    margin-bottom: 30px;
+
+    .title {
+        width: 100%;
+        max-width: calc(100% - 40px);
+        flex: 0 0 calc(100% - 40px);
+        margin: 0;
+    }
+
+    .switch {
+        width: 100%;
+        max-width: 40px;
+        flex: 0 0 40px;
+    }
+}
 
 .receiveemails__header {
+    input[type=checkbox] {
+        display: none;
+    }
+
+    label {
+        cursor: pointer;
+        text-indent: -9999px;
+        width: 36px;
+        height: 21px;
+        background: grey;
+        display: block;
+        border-radius: 100px;
+        position: relative;
+    }
+
+    label:after {
+        content: '';
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        width: 17px;
+        height: 17px;
+        background: #fff;
+        border-radius: 90px;
+        transition: 0.3s;
+    }
+
+    input:checked+label {
+        background: #158466;
+    }
+
+    input:checked+label:after {
+        left: calc(100% - 2px);
+        transform: translateX(-100%);
+    }
+
+    label:active:after {
+        width: 20px;
+    }
+}
+
+.receiveemails_checkfield {
+    margin-bottom: 25px;
+
+    input {
+        display: none;
+
+        &:checked {
+            &+label {
+                &::after {
+                    border-color: $base-green;
+                    background-color: $base-green;
+                    background-image: url('../img/general/check-white.svg');
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: 12px;
+                }
+            }
+        }
+    }
+
+    label {
+        display: inline-block;
+        position: relative;
+        color: $bace-color;
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 150%;
+        padding-left: 35px;
+        cursor: pointer;
+
+        &::after {
+            content: '';
+            display: inline-block;
+            border: 1px solid #3B454C;
+            border-radius: 5px;
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+    }
+}
+
+@media(max-width:767.8px) {
+    .marketingemailsbox p a {
+        margin-left: 0;
+    }
+}
+
+@media(max-width:575.8px) {
+    .marketingemailsbox .title {
+        margin-bottom: 10px;
+    }
+
+    .marketingemailsbox p,
+    .receiveemails_checkfield label {
+        font-size: 14px;
+    }
+
+    .acccontentsect__header p {
+        padding-right: 0;
+    }
+
 
 }
 
+// Recent orders
+.recentorder-filter {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 34px;
+
+    .leftsect {
+        width: 100%;
+        width: 285px;
+        flex: 0 0 285px;
+    }
+
+    .rightsect {
+        width: 100%;
+        max-width: calc(100% - 285px);
+        flex: 0 0 calc(100% - 285px);
+        padding-left: 20px;
+
+        .searchblock {
+            max-width: 100%;
+        }
+    }
+}
+
+.myacc-delivered {
+    margin-bottom: 52px;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    border-radius: 10px;
+    background: #FFF;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+
+}
+
+.myacc-delivered__left {
+    width: 100%;
+    max-width: calc(100% - 205px);
+    flex: 0 0 calc(100% - 205px);
+    padding-right: 20px;
+}
+
+.myacc-delivered__right {
+    width: 100%;
+    max-width: 205px;
+    flex: 0 0 205px;
+
+    a {
+        margin-bottom: 10px;
+        min-height: 40px;
+        font-size: 15px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+
+.delordertitle {
+    color: $base-green;
+    font-weight: 500;
+    line-height: 150%;
+    margin-bottom: 5px;
+
+    img {
+        vertical-align: middle;
+        max-width: 22px;
+        margin-top: -3px;
+        margin-right: 4px;
+    }
+}
+
+.delorderinfo {
+    margin-bottom: 25px;
+
+    span {
+        display: inline-block;
+        margin-right: 50px;
+        color: #3B454D;
+        font-size: 13px;
+        font-weight: 500;
+        line-height: 150%;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
+}
+
+.deliveredproduct {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.deliveredproduct__img {
+    width: 100%;
+    max-width: 90px;
+    flex: 0 0 90px;
+    text-align: center;
+
+    img {
+        max-width: 100%;
+    }
+}
+
+.deliveredproduct__descr {
+    width: 100%;
+    max-width: calc(100% - 90px);
+    flex: 0 0 calc(100% - 90px);
+    padding-left: 10px;
+    color: #3B454D;
+    line-height: 150%;
+
+    .title {
+        font-size: 17px;
+        margin-bottom: 5px;
+    }
+
+    .units {
+        font-size: 15px;
+        margin: 0;
+    }
+}
+
+.acccontentsect.myaccrecorder {
+    padding-bottom: 50px;
+
+    .pagination {
+        margin-top: 5px;
+
+        ul {
+            margin-right: 0;
+        }
+    }
+}
+
+@media(max-width:1199.8px) {
+    .myacc-delivered__left {
+        max-width: calc(100% - 160px);
+        flex: 0 0 calc(100% - 160px);
+    }
+
+    .myacc-delivered__right {
+        max-width: 160px;
+        flex: 0 0 160px;
+
+        .bordergreenbtn,
+        .greenbtn {
+            font-size: 13px;
+            min-height: 40px;
+        }
+    }
+
+    .delorderinfo span {
+        margin-right: 30px;
+    }
+
+    .deliveredproduct__descr .title {
+        font-size: 16px;
+    }
+
+}
+
+@media(max-width:991.8px) {
+    .recentorder-filter .leftsect {
+        max-width: 220px;
+        flex: 0 0 220px;
+    }
+
+    .recentorder-filter .rightsect {
+        max-width: calc(100% - 220px);
+        flex: 0 0 calc(100% - 220px);
+    }
+}
+
+@media(max-width:767.8px) {
+    .recentorder-filter .leftsect {
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 20px;
+    }
+
+    .recentorder-filter .rightsect {
+        max-width: 100%;
+        flex: 0 0 100%;
+        padding-left: 0;
+    }
+
+    .myacc-delivered__left,
+    .myacc-delivered__right {
+        max-width: 100%;
+        flex: 0 0 100%;
+        padding: 0;
+    }
+
+    .myacc-delivered__right {
+        margin-top: 20px;
+    }
+}
+
+@media(max-width:575.8px) {
+    .acccontentsect__header {
+        min-height: 60px;
+    }
+
+    .recentorder-filter .leftsect {
+        margin-bottom: 10px;
+    }
+
+    .recentorder-filter {
+        margin-bottom: 20px;
+    }
+
+    .delorderinfo span {
+        margin-right: 0;
+        display: block;
+    }
+
+    .deliveredproduct__img {
+        max-width: 100%;
+        flex: 0 0 100%;
+
+        img {
+            max-width: 100px;
+        }
+    }
+
+    .deliveredproduct__descr {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+
+    .deliveredproduct__descr .title {
+        font-size: 15px;
+    }
+
+    .myacc-delivered__right .greenbtn {
+        font-size: 13px !important;
+        min-height: 40px !important;
+    }
+
+    .acccontentsect.myaccrecorder .pagination {
+        ul {
+            li {
+                margin: 0 1px;
+
+                a {
+                    width: 30px;
+                    height: 30px;
+                }
+            }
+        }
+    }
+
+
+}
+
+@media(max-width:360.8px) {
+    .acccontentsect.myaccrecorder .pagination ul li {
+        margin: 0;
+    }
+}
+
+// My posted reviews
+.acccontentsect__body.mypostedreviews {
+    padding: 0;
+}
+
+.accpostedreviews__header {
+    padding: 25px 25px 0 25px;
+    border-bottom: 1.5px solid #D9DBDF;
+
+    .tabbtn {
+        padding: 0 10px;
+        color: $base-green;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 120%;
+        margin-right: 50px;
+        border-bottom: 4px solid transparent;
+        padding-bottom: 20px;
+        display: inline-block;
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        &.active {
+            font-weight: 600;
+            border-color: $base-green;
+        }
+    }
+}
+
+.tabcontent {
+    display: none;
+
+    &.show {
+        display: block;
+    }
+}
+
+.contactsection__tabbody {
+    padding: 45px 35px;
+}
+
+.postedreviewbox {
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    padding: 20px;
+    margin-bottom: 20px;
+
+    &:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.postedreviewbox__left {
+    width: 100%;
+    max-width: 180px;
+    flex: 0 0 180px;
+
+    .imgwrap {
+        text-align: center;
+
+        img {
+            max-width: 100%;
+        }
+    }
+}
+
+.postedreviewbox__right {
+    width: 100%;
+    max-width: calc(100% - 180px);
+    flex: 0 0 calc(100% - 180px);
+    padding-left: 16px;
+
+    .title {
+        color: $bace-color;
+        font-size: 17px;
+        font-weight: 500;
+        line-height: 160%;
+        margin-bottom: 15px;
+    }
+
+    .rating {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        max-width: 120px;
+        flex: 0 0 120px;
+        margin-bottom: 15px;
+
+        img {
+            width: 19px;
+        }
+    }
+
+    textarea {
+        width: 100%;
+        border: transparent;
+        font-family: "Montserrat",sans-serif;
+        color: $bace-color;
+        font-size: 15px;
+        line-height: 150%;
+        outline: none;
+        pointer-events: none;
+        resize: none;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
+
+
+
+}
+
+.postedreviewbox__bottomsect {
+    text-align: right;
+    margin-top: 35px;
+
+    .date {
+        color: #808080;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 120%;
+        margin-left: 40px;
+    }
+
+    .postedreview__share {
+        font-size: 15px;
+        font-weight: 500;
+        line-height: 150%;
+        margin-left: 40px;
+        display: inline-block;
+        color: #259688;
+
+        img {
+            width: 15px;
+            vertical-align: middle;
+            margin-left: 6px;
+        }
+    }
+
+    .postedreview__edit {
+        color: #259688;
+        font-size: 15px;
+        line-height: 160%;
+        text-decoration: underline;
+        text-underline-offset: 2px;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+
+}
