--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -215,6 +215,7 @@ h6 {
             font-size: 16px;
             font-weight: 500;
             line-height: 85%;
+            text-transform: capitalize;
 
             &:last-child {
                 margin-right: 0;
