--- a/#source/scss/global.scss
+++ b/#source/scss/global.scss
@@ -420,9 +420,38 @@ input[type=number] {
     }
 }
 
+// modal
 
+.generalmodal {
+    .modal-dialog {
+        max-width: 700px;
+    }
 
+    .modal-footer {
 
+        .bordergreenbtn,
+        .greenbtn {
+            display: inline-flex;
+            max-width: 160px;
+            flex: 0 0 160px;
+        }
+    }
+
+    .modal-title {
+        color: $base-green;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 120%;
+    }
+
+    .btn-close {
+        outline: none;
+        box-shadow: none;
+        border-radius: 50%;
+        background-color: rgba(21, 132, 102, 0.2);
+        background-size: 12px;
+    }
+}
 
 
 
