--- a/#source/scss/my-account.scss
+++ b/#source/scss/my-account.scss
@@ -2140,6 +2140,12 @@
         margin-top: 25px;
     }
 
+    .widthwrap .inputicon:after {
+        left: 20px;
+        top: 49px;
+    }
+    
+
 }
 
 @media(max-width:360.8px) {
@@ -2151,7 +2157,8 @@
 
 // My posted blog
 .postedblogrow {
-    .col-lg-4 {
+    .col-lg-4,
+    .col-xl-4 {
         margin-bottom: 18px;
     }
 
@@ -2231,7 +2238,7 @@
 
     .recipesslide__info {
         margin-bottom: 11px;
-        
+
         ul {
             li {
                 font-size: 11px;
