--- a/#source/scss/my-account.scss
+++ b/#source/scss/my-account.scss
@@ -796,7 +796,7 @@
 
 .accountsection {
     position: relative;
-    z-index: 2;
+    // z-index: 2;
 }
 
 .mainbgelem {
@@ -1009,7 +1009,7 @@
 
 .accountsection {
     position: relative;
-    z-index: 12;
+    // z-index: 12;
 }
 
 @media(max-width:1199.8px) {
