--- a/#source/scss/seller-account.scss
+++ b/#source/scss/seller-account.scss
@@ -17,7 +17,6 @@
             }
         }
     }
-    
 }
 
 .accountsidebar__box ul li.active .sellacc__sublist a {
@@ -733,4 +732,451 @@ input:focus+label+.input-infobtn {
     .select2-container--default .select2-selection--single .select2-selection__arrow {
         top: 15px;
     }
+}
+
+.radioinprow {
+    order: 2;
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+    .radiobox {
+        margin-right: 25px;
+
+        input {
+            display: none;
+
+            &:checked {
+                &+label {
+                    &::after {
+                        border-color: $base-green;
+                        background: url(../img/recipes/radio-checked.svg) no-repeat center/10px;
+                    }
+                }
+            }
+        }
+
+        label {
+            padding-left: 26px;
+            position: relative;
+            cursor: pointer;
+
+            &::after {
+                content: '';
+                display: inline-block;
+                width: 19px;
+                height: 19px;
+                border-radius: 50%;
+                border: 1px solid #3B454C;
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+            }
+        }
+    }
+}
+
+.formbox .inputfield p {
+    width: 100%;
+    color: #21292F;
+    font-weight: 500;
+    line-height: 160%;
+}
+
+.formbox {
+    .titleinfo {
+        color: $bace-color;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 120%;
+        margin-bottom: 25px;
+
+        img {
+            width: 16px;
+        }
+    }
+
+    .addingr {
+        display: inline-block;
+
+        .addbtn {
+            width: 190px;
+            height: 45px;
+            border-radius: 40px;
+            border: 1px solid $base-green;
+            color: $base-green;
+            font-size: 15px;
+            font-weight: 600;
+            line-height: 100%;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.3s;
+
+            &:hover {
+                background: $base-green;
+                color: $white;
+            }
+        }
+    }
+
+    .addingredients {
+        margin-bottom: 35px;
+    }
+
+    .imageuploadify {
+        max-width: 100%;
+
+        .addphotovideo {
+            display: none;
+        }
+    }
+}
+
+.selleraddproduct__btns {
+    margin-top: 45px;
+    display: flex;
+    align-items: center;
+
+    .greenbtn,
+    .bordergreenbtn {
+        min-height: 60px;
+        font-size: 18px;
+        max-width: 250px;
+    }
+
+    .greenbtn {
+        margin-right: 30px;
+    }
+
+    .bordergreenbtn {}
+}
+
+@media(max-width:1199.8px) {
+    .input-infobtn {
+        height: 50px;
+    }
+
+    .formbox .inputfield .generalselect {
+
+        .select2-container .select2-selection--single {
+            height: 50px;
+        }
+
+        .select2-container--default .select2-selection--single .select2-selection__rendered {
+            line-height: 50px;
+        }
+
+        .select2-container--default .select2-selection--single .select2-selection__arrow {
+            top: 10px;
+        }
+    }
+}
+
+@media(max-width:991.8px) {
+    .formbox {
+        .uploadphoto .imageuploadify .imageuploadify-images-list .imageuploadify-container {
+            width: 182px;
+        }
+
+        .imageuploadify .imageuploadify-images-list button.btn-default {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+    }
+
+    .selleraddproduct .formbox {
+        padding: 20px;
+    }
+}
+
+@media(max-width:767.8px) {
+    .formbox {
+        .uploadphoto .imageuploadify .imageuploadify-images-list .imageuploadify-container {
+            width: 150px;
+        }
+
+        .imageuploadify .imageuploadify-images-list button.btn-default {
+            width: 150px;
+        }
+
+    }
+
+}
+
+@media(max-width:575.8px) {
+    .selleraddproduct .formbox {
+        padding: 15px;
+    }
+
+    .input-infobtn {
+        height: 46px;
+        border-width: 1px;
+    }
+
+    .formbox .inputfield .generalselect .select2-container--default .select2-selection--single .select2-selection__rendered {
+        line-height: 46px;
+    }
+
+    .formbox .inputfield .generalselect .select2-container .select2-selection--single {
+        height: 46px;
+    }
+
+    .formbox .inputfield .generalselect .select2-container .select2-selection--single {
+        border-width: 1px;
+    }
+
+    .radioinprow {
+        flex-wrap: wrap;
+    }
+
+    .selleraddproduct .formbox .inputfield {
+        margin-bottom: 15px;
+    }
+
+    .formbox .generalselect .select2-container--default .select2-selection--single .select2-selection__rendered {
+        padding-left: 15px;
+    }
+
+    .selleraddproduct__btns {
+        flex-wrap: wrap;
+    }
+
+    .selleraddproduct__btns .bordergreenbtn,
+    .selleraddproduct__btns .greenbtn {
+        max-width: 100%;
+        width: 100%;
+    }
+
+    .selleraddproduct__btns {
+        .greenbtn {
+            margin-right: 0;
+            margin-bottom: 10px;
+        }
+
+        .bordergreenbtn {
+            min-height: 46px;
+            font-size: 16px;
+        }
+    }
+
+    .acccontentsect__body.p0 {
+        padding-bottom: 40px;
+    }
+
+    .formbox .imageuploadify .imageuploadify-images-list button.btn-default {
+        width: 100%;
+    }
+
+    .formbox .uploadphoto .imageuploadify .imageuploadify-images-list .imageuploadify-container {
+        width: 100%;
+    }
+
+}
+
+// PRODUCT DETAILS
+.largemodal {
+    .modal-dialog {
+        max-width: 1160px;
+    }
+
+    .modal-content {
+        border: none;
+    }
+}
+
+.productdetails {
+    padding: 45px 35px;
+
+    .title {
+        color: $base-green;
+        font-size: 30px;
+        font-weight: 600;
+        line-height: 120%;
+        margin-bottom: 35px;
+    }
+
+    .greenbtn.editinformation {
+        min-height: 60px;
+        font-size: 18px;
+        width: 255px;
+        margin-top: 30px;
+    }
+}
+
+.roductdetails__infoblock {
+    background: #fff;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    height: calc(100% - 20px);
+    color: $bace-color;
+
+    .infoblock__title {
+        margin-bottom: 24px;
+        font-size: 22px;
+        font-weight: 500;
+        line-height: 120%;
+    }
+
+    .positionname {
+        margin-bottom: 10px;
+        color: #3B454D;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 160%;
+    }
+
+    p {
+        color: #3B454D;
+        font-size: 15px;
+        line-height: 150%;
+        margin-bottom: 10px;
+
+        b {
+            font-weight: 600;
+        }
+    }
+
+    .infoblock__list {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+            color: #3B454D;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 150%;
+            margin-bottom: 15px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            span {
+                font-weight: 400;
+            }
+
+            img {
+                vertical-align: middle;
+                width: 26px;
+                margin-top: -3px;
+                margin-right: 5px;
+            }
+        }
+
+        .infoblock__list-price {
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 110%;
+        }
+    }
+
+    ul {
+        font-size: 15px;
+        margin-bottom: 10px;
+    }
+
+    .subtitle {
+        margin-top: 30px;
+        margin-bottom: 20px;
+        font-size: 17px;
+        font-weight: 600;
+        line-height: 135%;
+    }
+
+    .productdetails__tablewrap {
+        margin-bottom: 40px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        table {
+            b {
+                font-weight: 600;
+            }
+        }
+    }
+
+    .table>:not(caption)>*>* {
+        padding: 12px;
+    }
+
+    table {
+        thead {
+            th {
+                font-size: 12px;
+                font-weight: 600;
+                line-height: 135%;
+            }
+        }
+
+        tbody {
+            td {
+                font-size: 15px;
+                line-height: 135%;
+            }
+        }
+
+        .tabletrtitle {
+            padding-right: 10px;
+            width: calc(100% - 200px);
+        }
+
+        .amperserv {
+            width: 127px;
+            padding-right: 10px;
+        }
+
+        .dailyval {
+            width: 73px;
+        }
+    }
+
+    .afttabtext {
+        font-size: 14px;
+        line-height: 135%;
+        margin: 0;
+    }
+
+    .imgsbox {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -20px;
+        margin-right: -20px;
+
+        .imgcol {
+            width: 100%;
+            max-width: 33.333%;
+            flex: 0 0 33.333%;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-bottom: 35px;
+        }
+
+        .imgwrap {
+            height: 120px;
+            border-radius: 5px;
+            box-shadow: 0px 4px 13px 0px rgba(0, 0, 0, 0.03);
+            position: relative;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: 50% 50%;
+            }
+        }
+    }
+
+
+
+
+
+
 }
