--- a/#source/scss/popups.scss
+++ b/#source/scss/popups.scss
@@ -569,3 +569,71 @@
 
 
 }
+
+// delete items
+.smallpopup .modal-content {
+    border: none;
+}
+
+.smallpopup {
+    .modal-dialog {
+        max-width: 385px;
+    }
+
+    .modal-content {
+        padding: 65px 47px 55px;
+    }
+}
+
+.deletepopup__sect {
+    text-align: center;
+
+    img {
+        max-width: 100px;
+        margin-bottom: 35px;
+    }
+
+    .title {
+        color: $bace-color;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 150%;
+        margin-bottom: 20px;
+    }
+
+    p {
+        color: $bace-color;
+        font-size: 14px;
+        margin-bottom: 23px;
+        line-height: 160%;
+    }
+
+    .greenbtn {
+        margin-bottom: 20px;
+    }
+
+    .greenbtn,
+    .bordergreenbtn {
+        height: 45px;
+        font-size: 15px;
+    }
+
+}
+
+@media(max-width:575.8px) {
+    .smallpopup .modal-dialog {
+        max-width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .smallpopup .modal-content {
+        padding: 20px 30px 30px;
+    }
+
+    .deletepopup__sect img {
+        margin-bottom: 20px;
+    }
+
+    
+}
