--- a/#source/scss/seller-account.scss
+++ b/#source/scss/seller-account.scss
@@ -1459,8 +1459,292 @@ input:focus+label+.input-infobtn {
     .sellertable .name {
         width: calc(100% - 709px);
     }
+
+    tbody {
+        .info {
+            p {
+                margin: 0 0 4px 0;
+                color: #3B454D;
+                font-size: 14px;
+            }
+        }
+
+        .client {
+            p {
+                margin: 0;
+                color: #3B454D;
+                font-size: 14px;
+
+                a {
+                    display: block;
+                    color: $base-green;
+                    text-decoration: underline;
+                    font-size: 14px;
+                    margin-top: 4px;
+                }
+            }
+        }
+
+        .amount {
+            p {
+                color: #3B454D;
+                font-size: 16px;
+                font-weight: 600;
+                line-height: 150%;
+
+                span {
+                    display: block;
+                    margin-top: 4px;
+                    font-size: 14px;
+                    font-weight: 400;
+                }
+            }
+        }
+
+        .name {
+            .infotext {
+                font-size: 14px;
+                color: #3B454D;
+
+                span {
+                    display: block;
+                    color: $base-green;
+                }
+            }
+        }
+    }
 }
 
+@media(max-width:1550.8px) {
+    .sellertable .orderlist .status {
+        width: 160px;
+
+        .generalselect {
+            width: 160px;
+
+            .select2-container--default .select2-selection--single .select2-selection__rendered {
+                padding-left: 15px;
+            }
+        }
+    }
+
+    .sellertable .orderlist .info {
+        width: 150px;
+    }
+
+    .sellertable .orderlist .client {
+        width: 180px;
+    }
+
+    .sellertable .orderlist .amount {
+        width: 110px;
+    }
+
+    .sellertable .orderlist .name {
+        width: calc(100% - 630px);
+    }
 
 
+}
+
+@media(max-width:575.8px) {
+    .seller-tableproduct .descrwrap .title {
+        font-size: 14px;
+    }
+}
+
+// Add Order
+.addorder {
+    .acccontentsect__header.twocol .greenbtn {
+        min-height: 45px;
+        font-size: 15px;
+    }
+}
+
+.selleraccwhwrap {
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    padding: 25px;
+    margin-bottom: 20px;
+    overflow: hidden;
+
+    .title {
+        color: $bace-color;
+        font-size: 22px;
+        font-weight: 500;
+        line-height: 120%;
+        margin: 0;
+    }
+
+    .titlelink {
+        color: $bace-color;
+        font-size: 14px;
+        transition: 0.3s;
+
+        &:hover {
+            color: $base-green;
+        }
+
+        img {
+            display: inline-block;
+            vertical-align: middle;
+            width: 20px;
+            margin-right: 6px;
+            margin-top: -3px;
+        }
+    }
+}
+
+.selleraccwhwrap__head {
+    margin-bottom: 30px;
+}
+
+.aboutorder {
+    .orderproduct {
+        width: 100%;
+        max-width: 47%;
+        flex: 0 0 47%;
+        display: flex;
+        flex-wrap: wrap;
+
+        .imgwrap {
+            width: 100%;
+            max-width: 140px;
+            flex: 0 0 140px;
+            height: 115px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 5px;
+            background: #fff;
+            filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.06));
+
+            img {
+                max-width: 90%;
+                max-height: 90%;
+            }
+        }
+
+        .descrwrap {
+            width: 100%;
+            max-width: calc(100% - 140px);
+            flex: 0 0 calc(100% - 140px);
+            padding-left: 15px;
+            padding-right: 50px;
+
+            .title {
+                margin-bottom: 10px;
+                color: #3B454D;
+                font-size: 16px;
+                line-height: 150%;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+
+            .weight {
+                margin-bottom: 0;
+                color: #6A747B;
+                font-size: 14px;
+                line-height: 150%;
+            }
+        }
+    }
+
+    .ordercount {
+        width: 100%;
+        max-width: 22%;
+        flex: 0 0 22%;
+
+        .number {
+            width: 114px;
+            padding: 6px 9px;
+            border-radius: 34px;
+            border: 1px solid #D9DBDF;
+            display: flex;
+            align-items: center;
+
+            span {
+                width: 100%;
+                max-width: 15px;
+                flex: 0 0 15px;
+                height: 15px;
+                background: $base-green;
+                border-radius: 50%;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+
+                img {
+                    width: 9px;
+                }
+            }
+
+            input {
+                width: 100%;
+                max-width: 58px;
+                flex: 0 0 58px;
+                border: none;
+                text-align: center;
+                color: #353535;
+                font-size: 16px;
+                font-weight: 500;
+                height: 20px;
+            }
+        }
+    }
+
+    .orderprice {
+        width: 100%;
+        max-width: 14%;
+        flex: 0 0 14%;
+
+        p {
+            color: $base-green;
+            margin-bottom: 9px;
+            font-size: 18px;
+            font-weight: 600;
+
+
+            &.oldprice {
+                color: #7E8386;
+                margin-bottom: 0;
+                font-size: 15px;
+                font-weight: 400;
+                text-decoration: line-through;
+            }
+        }
+    }
+
+    .orderdel {
+        width: 100%;
+        max-width: 17%;
+        flex: 0 0 17%;
+
+        img {
+            width: 15px;
+        }
+    }
+}
+
+.selleraccwhwrap__head-border {
+    margin-bottom: 25px;
+    padding-bottom: 35px;
+    position: relative;
+
+    &::after {
+        content: '';
+        display: block;
+        height: 1px;
+        width: calc(100% + 30px);
+        position: absolute;
+        left: -15px;
+        bottom: 0;
+        height: 1.5px;
+        background: #D9DBDF;
+    }
+}
 
