--- a/#source/scss/seller-account.scss
+++ b/#source/scss/seller-account.scss
@@ -1748,3 +1748,351 @@ input:focus+label+.input-infobtn {
     }
 }
 
+.selleraccwhwrap {
+    height: 100%;
+
+    .generalselect {
+        margin-top: 25px;
+    }
+}
+
+.acccontentsect__body {
+    .grlink {
+        color: $base-green;
+        font-size: 15px;
+        text-decoration-line: underline;
+        text-underline-offset: 2px;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+
+.addordlist {
+    list-style-type: none;
+    padding: 0;
+    margin: 35px 0 0 0;
+
+    li {
+        margin-bottom: 15px;
+        font-size: 14px;
+        line-height: 160%;
+        color: $bace-color;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+
+.addordbtnsave {
+    margin-top: 50px;
+
+    .greenbtn {
+        width: 188px;
+        height: 60px;
+        font-size: 18px;
+    }
+}
+
+@media(max-width:1399.8px) {
+
+    .aboutorder .orderdel {
+        max-width: 40px;
+        flex: 0 0 40px;
+    }
+
+    .aboutorder .orderprice {
+        max-width: 110px;
+        flex: 0 0 110px;
+    }
+
+    .aboutorder .ordercount {
+        max-width: 150px;
+        flex: 0 0 150px;
+    }
+
+    .aboutorder .orderproduct {
+        max-width: calc(100% - 300px);
+        flex: 0 0 calc(100% - 300px);
+    }
+
+
+
+
+
+}
+
+@media(max-width:1199.8px) {
+
+    .aboutorder .orderproduct {
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 10px;
+    }
+
+    .aboutorder .orderprice {
+        max-width: calc(50% - 25px);
+        flex: 0 0 calc(50% - 25px);
+    }
+
+    .aboutorder .ordercount {
+        max-width: calc(50% - 25px);
+        flex: 0 0 calc(50% - 25px);
+    }
+
+    .selleraccwhwrap {
+        height: auto;
+    }
+
+
+
+}
+
+@media(max-width:991.89px) {
+    .aboutorder .orderproduct .descrwrap {
+        padding-right: 0;
+    }
+
+    .aboutorder .orderproduct .imgwrap {
+        max-width: 100px;
+    }
+
+    .aboutorder .orderproduct .descrwrap {
+        max-width: calc(100% - 100px);
+        flex: 0 0 calc(100% - 100px);
+    }
+
+    .addordbtnsave {
+        margin-top: 30px;
+    }
+}
+
+@media(max-width:991.89px) {
+
+    .selleraccwhwrap__head .text-end,
+    .selleraccwhwrap .text-end {
+        text-align: left !important;
+        margin-top: 10px;
+    }
+}
+
+@media(max-width:575.8px) {
+    .selleraccwhwrap {
+        padding: 10px;
+    }
+
+    .selleraccwhwrap .title {
+        font-size: 20px;
+    }
+
+    .aboutorder .orderproduct .imgwrap,
+    .aboutorder .orderproduct .descrwrap,
+    .aboutorder .ordercount {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+
+    .aboutorder .orderproduct .imgwrap {
+        margin-bottom: 20px;
+    }
+
+    .aboutorder .orderproduct .descrwrap .title {
+        -webkit-line-clamp: 3;
+    }
+
+    .selleraccwhwrap__head {
+        margin-bottom: 20px;
+    }
+
+    .aboutorder .ordercount {
+        margin-bottom: 10px;
+    }
+
+    .aboutorder .orderprice {
+        max-width: 60%;
+        flex: 0 0 60%;
+    }
+
+    .aboutorder .orderdel {
+        max-width: 40%;
+        flex: 0 0 40%;
+        text-align: right;
+    }
+
+    .selleraccwhwrap__head-border {
+        padding-bottom: 15px;
+    }
+
+    .selleraccwhwrap .generalselect {
+        margin-top: 15px;
+    }
+
+    .addordlist {
+        margin-top: 25px;
+    }
+
+    .addordbtnsave {
+        margin-top: 0px;
+
+        .greenbtn {
+            height: 50px;
+            width: 100%;
+        }
+    }
+}
+
+// Order details
+.productdetails.productdetails__order {
+    .ordernum {
+        color: $bace-color;
+        font-size: 22px;
+        font-weight: 500;
+        line-height: 120%;
+        margin: 0;
+
+        span {
+            margin-left: 20px;
+            color: #3B454D;
+            font-size: 14px;
+            font-weight: 500;
+        }
+    }
+
+    .aboutorder .orderproduct .descrwrap .title {
+        font-weight: 400;
+    }
+
+    .clientdetails {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+            color: #3B454D;
+            font-size: 14px;
+            margin-bottom: 4px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            a {
+                color: $base-green;
+                text-decoration: underline;
+                text-underline-offset: 2px;
+
+                &:hover {
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+
+    .paymentinfo {
+        margin-top: 35px;
+        padding-top: 25px;
+        position: relative;
+
+        &::after {
+            content: '';
+            display: block;
+            height: 1.5px;
+            background: #D9DBDF;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: calc(100% + 50px);
+            left: -25px;
+        }
+
+    }
+
+    .inputval {
+        color: $bace-color;
+        font-size: 14px;
+        font-weight: 500;
+        width: 100%;
+        height: 55px;
+        display: flex;
+        align-items: center;
+        border: 2px solid #DBDCE2;
+        border-radius: 53px;
+        background: #FFF;
+        padding: 0 30px;
+    }
+
+    .orddetbtns {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 20px;
+
+        a {
+            width: 100%;
+            max-width: calc(50% - 10px);
+            flex: 0 0 calc(50% - 10px);
+            height: 45px;
+            font-size: 15px;
+
+            img {
+                margin-right: 10px;
+            }
+        }
+    }
+
+}
+
+@media(max-width:575.8px) {
+    .productdetails.productdetails__order .ordernum {
+        font-size: 20px;
+    }
+
+    .aboutorder .orderproduct .descrwrap {
+        padding-left: 0;
+    }
+
+    .productdetails.productdetails__order .orddetbtns {
+        flex-wrap: wrap;
+    }
+
+    .productdetails.productdetails__order .orddetbtns {
+        a {
+            max-width: 100%;
+            flex: 0 0 100%;
+        }
+
+        .bordergreenbtn {
+            margin-bottom: 10px;
+        }
+
+
+    }
+
+    .productdetails.productdetails__order .paymentinfo:after {
+        width: calc(100% + 30px);
+        left: -15px;
+    }
+
+}
+
+@media(max-width:360.8px) {
+    .productdetails.productdetails__order .ordernum span {
+        display: block;
+        margin-left: 0;
+    }
+}
+
+// Promotion list
+.sellertable .promotionlist{
+    .no-sort {
+        &::after {
+            display: none;
+        }
+    }
+
+
+
+
+}
